--- a/prove/Develop02/Develop02.csproj
+++ b/prove/Develop02/Develop02.csproj
@@ -1,7 +1,7 @@
 
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertGroup>
+  <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
